--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 		href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="Web site created using create-react-app" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 	<title>React App</title>
 </head>
 
